# crate-secretx

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  MIGRATION.md  README.md  RELEASING.md  SPEC-crate-secretsx.md  typos.toml
.beads/: config_kv.json  metadata.json
.beads/comments/crate-secretsx-6xym.25/: 019ecdca-b13c-7b1e-96c4-146ed8fdb4c2.json
.beads/comments/crate-secretsx-6xym.6/: 019ecdce-476e-7405-97a4-9891860f8e9f.json
.beads/comments/crate-secretsx-pu1q.18/: 019ed395-63fe-77b5-8b8a-0ff8a983af5e.json
.beads/comments/crate-secretsx-pu1q.5/: 019ed35a-62da-7cfe-a04c-b46e9fdf7ab0.json
.beads/comments/crate-secretsx-pu1q.8/: 019ed348-55fe-75ff-96f0-8f3a79641c54.json
.beads/issues/: crate-secretsx-02f.json  crate-secretsx-03l.json  crate-secretsx-07b.json  crate-secretsx-0aid.json  crate-secretsx-0dz.json  crate-secretsx-0gzu.json  crate-secretsx-0hfd.1.json  crate-secretsx-0hfd.2.json  crate-secretsx-0hfd.3.json  crate-secretsx-0hfd.4.json  crate-secretsx-0hfd.5.json  crate-secretsx-0hfd.6.json  crate-secretsx-0hfd.7.json  crate-secretsx-0hfd.8.json  crate-secretsx-0hfd.9.json  crate-secretsx-0hfd.json  crate-secretsx-0ib.json  crate-secretsx-0iz.json  crate-secretsx-16s5.json  crate-secretsx-1az.1.json  crate-secretsx-1az.2.json  crate-secretsx-1az.3.json  crate-secretsx-1az.json  crate-secretsx-1de.json  crate-secretsx-1l1.1.json  crate-secretsx-1l1.2.json  crate-secretsx-1l1.3.json  crate-secretsx-1l1.4.json  crate-secretsx-1l1.5.json  crate-secretsx-1l1.6.json  crate-secretsx-1l1.7.json  crate-secretsx-1l1.8.json  crate-secretsx-1l1.json  crate-secretsx-1ma.1.json  crate-secretsx-1ma.2.json  crate-secretsx-1ma.3.json  crate-secretsx-1ma.4.json  crate-secretsx-1ma.json  crate-secretsx-1oo.1.json  crate-secretsx-1oo.10.json  (+1106 more)
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml
secretx/: Cargo.toml
secretx-alibaba-sm/: README.md
secretx-aws-kms/: Cargo.toml  README.md
secretx-aws-kms/src/: lib.rs
secretx-aws-sm/: Cargo.toml  README.md
secretx-aws-sm/src/: lib.rs
secretx-aws-ssm/: Cargo.toml  README.md
secretx-aws-ssm/src/: lib.rs
secretx-azure-kv/: Cargo.toml  README.md
secretx-azure-kv/src/: lib.rs
secretx-barbican/: README.md
secretx-bitwarden/: Cargo.toml  README.md
secretx-bitwarden/src/: lib.rs
secretx-cache/: Cargo.toml  README.md
secretx-cache/src/: lib.rs
secretx-cache/tests/: caching_store.rs
secretx-core/: Cargo.toml  README.md
secretx-core/src/: lib.rs
secretx-desktop/: Cargo.toml  README.md
secretx-desktop/src/: lib.rs
secretx-doppler/: Cargo.toml  README.md
secretx-doppler/src/: lib.rs
secretx-env/: Cargo.toml  README.md
secretx-env/src/: lib.rs
secretx-file/: Cargo.toml  README.md
secretx-file/src/: lib.rs
secretx-gcp-sm/: Cargo.toml  README.md
secretx-gcp-sm/src/: lib.rs
secretx-hashicorp-vault/: Cargo.toml  README.md
secretx-hashicorp-vault/src/: lib.rs
secretx-huawei-csms/: README.md
secretx-ibm-sm/: README.md
secretx-k8s/: Cargo.toml  README.md
secretx-k8s/src/: lib.rs
secretx-k8s/tests/: e2e.rs
secretx-keyring/: Cargo.toml  README.md
secretx-keyring/src/: lib.rs
secretx-local-signing/: Cargo.toml  README.md
secretx-local-signing/src/: lib.rs
secretx-mem/: Cargo.toml  README.md
secretx-mem/src/: lib.rs
secretx-oci-vault/: README.md
secretx-pkcs11/: Cargo.toml  README.md
secretx-pkcs11/src/: lib.rs
secretx-scaleway-sm/: README.md
secretx-signature/: Cargo.toml  README.md
secretx-signature/src/: lib.rs
secretx-systemd/: Cargo.toml  README.md
secretx-systemd/src/: lib.rs
secretx-tencent-ssm/: README.md
secretx-tpm2/: Cargo.toml  README.md
secretx-tpm2/src/: lib.rs
secretx-wolfhsm/: Cargo.toml  README.md
secretx-wolfhsm/src/: lib.rs
secretx-yandex-lockbox/: README.md
secretx/src/: lib.rs
