[workspace]
members = [
    "secretx-core",
    "secretx-cache",
    "secretx-aws-kms",
    "secretx-aws-sm",
    "secretx-aws-ssm",
    "secretx-azure-kv",
    "secretx-bitwarden",
    "secretx-doppler",
    "secretx-env",
    "secretx-file",
    "secretx-gcp-sm",
    "secretx-hashicorp-vault",
    "secretx-keyring",
    "secretx-pkcs11",
    "secretx-wolfhsm",
    "secretx",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["WolfSSL Inc."]

[workspace.dependencies]
secretx-core = { path = "secretx-core", version = "0.1.0" }
secretx-cache = { path = "secretx-cache", version = "0.1.0" }
secretx-aws-kms = { path = "secretx-aws-kms", version = "0.1.0" }
secretx-aws-sm = { path = "secretx-aws-sm", version = "0.1.0" }
secretx-aws-ssm = { path = "secretx-aws-ssm", version = "0.1.0" }
secretx-azure-kv = { path = "secretx-azure-kv", version = "0.1.0" }
secretx-bitwarden = { path = "secretx-bitwarden", version = "0.1.0" }
secretx-doppler = { path = "secretx-doppler", version = "0.1.0" }
secretx-env = { path = "secretx-env", version = "0.1.0" }
secretx-file = { path = "secretx-file", version = "0.1.0" }
secretx-gcp-sm = { path = "secretx-gcp-sm", version = "0.1.0" }
secretx-hashicorp-vault = { path = "secretx-hashicorp-vault", version = "0.1.0" }
secretx-keyring = { path = "secretx-keyring", version = "0.1.0" }
secretx-pkcs11 = { path = "secretx-pkcs11", version = "0.1.0" }
secretx-wolfhsm = { path = "secretx-wolfhsm", version = "0.1.0" }
async-trait = "0.1"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
zeroize = { version = "1", features = ["alloc"] }
