[workspace]
members = [
    "secretx-core",
    "secretx-cache",
    "secretx-aws-kms",
    "secretx-aws-sm",
    "secretx-aws-ssm",
    "secretx-azure-kv",
    "secretx-bitwarden",
    "secretx-doppler",
    "secretx-env",
    "secretx-file",
    "secretx-gcp-sm",
    "secretx-hashicorp-vault",
    "secretx-keyring",
    "secretx-local-signing",
    "secretx-pkcs11",
    "secretx-wolfhsm",
    "secretx",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["WolfSSL Inc."]

[workspace.dependencies]
secretx-core = { path = "secretx-core", version = "0.1.0" }
secretx-cache = { path = "secretx-cache", version = "0.1.0" }
secretx-aws-kms = { path = "secretx-aws-kms", version = "0.1.0" }
secretx-aws-sm = { path = "secretx-aws-sm", version = "0.1.0" }
secretx-aws-ssm = { path = "secretx-aws-ssm", version = "0.1.0" }
secretx-azure-kv = { path = "secretx-azure-kv", version = "0.1.0" }
secretx-bitwarden = { path = "secretx-bitwarden", version = "0.1.0" }
secretx-doppler = { path = "secretx-doppler", version = "0.1.0" }
secretx-env = { path = "secretx-env", version = "0.1.0" }
secretx-file = { path = "secretx-file", version = "0.1.0" }
secretx-gcp-sm = { path = "secretx-gcp-sm", version = "0.1.0" }
secretx-hashicorp-vault = { path = "secretx-hashicorp-vault", version = "0.1.0" }
secretx-keyring = { path = "secretx-keyring", version = "0.1.0" }
secretx-pkcs11 = { path = "secretx-pkcs11", version = "0.1.0" }
secretx-wolfhsm = { path = "secretx-wolfhsm", version = "0.1.0" }
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-kms = "1"
aws-sdk-secretsmanager = "1"
aws-sdk-ssm = "1"
keyring = "3"
reqwest = { version = "0.13", features = ["json"] }
vaultrs = "0.8"
bitwarden = "2"
azure_core = "0.35"
azure_identity = "0.35"
azure_security_keyvault_secrets = "0.14"
cryptoki = "0.12"
base64 = "0.22"
google-cloud-secretmanager-v1 = "1.8"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
pkcs8 = { version = "0.10", features = ["std"] }
rsa = { version = "0.9", features = ["sha2", "getrandom"] }
secretx-local-signing = { path = "secretx-local-signing", version = "0.1.0" }
serde_json = "1"
sha2 = "0.10"
signature = "2"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync"] }
zeroize = { version = "1", features = ["alloc"] }
