[package]
name = "secretx-aws-sm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "AWS Secrets Manager backend for secretx."
readme = "README.md"
keywords = ["secrets", "security"]
categories = ["cryptography", "authentication"]
repository = "https://github.com/MarkAtwood/crate-secretx"

[dependencies]
secretx-core = { workspace = true, features = ["blocking"] }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
serde_json = { workspace = true }
zeroize = { workspace = true }
inventory = { workspace = true }
tokio = { workspace = true }
