[package]
name = "secretx-bitwarden"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Bitwarden Secrets Manager backend for secretx."
keywords = ["secrets", "security"]
categories = ["cryptography", "authentication"]
repository = "https://github.com/MarkAtwood/crate-secretx"

[dependencies]
secretx-core = { workspace = true }
async-trait = { workspace = true }
bitwarden = { workspace = true }
uuid = { version = "1" }
zeroize = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
