[package]
name = "secretx-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CachingStore wrapper with TTL-based eviction."
keywords = ["secrets", "security"]
categories = ["cryptography", "authentication"]
repository = "https://github.com/MarkAtwood/crate-secretx"

[dependencies]
secretx-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
zeroize = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
