[package]
name = "secretx-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Desktop keychain backend for secretx (macOS Keychain, GNOME Keyring, Windows Credential Manager)."
readme = "README.md"
keywords = ["secrets", "security", "keychain", "keyring"]
categories = ["cryptography", "authentication"]
repository = "https://github.com/MarkAtwood/crate-secretsx"

[dependencies]
secretx-core = { workspace = true }
async-trait = { workspace = true }
inventory = { workspace = true }
tokio = { workspace = true }
# explicit features — no linux-native so that on Linux the default is
# Secret Service (D-Bus), not the kernel keyring.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }

[dev-dependencies]
tokio = { workspace = true }
