[package]
name = "secretx-file"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Filesystem backend for secretx."
readme = "README.md"
keywords = ["secrets", "security"]
categories = ["cryptography", "authentication"]
repository = "https://github.com/MarkAtwood/crate-secretx"

[dependencies]
async-trait = { workspace = true }
inventory = { workspace = true }
secretx-core = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

