[package]
name = "secretx-gcp-sm"
version = "0.3.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "GCP Secret Manager backend for secretx."
readme = "README.md"
keywords = ["secrets", "security"]
categories = ["cryptography", "authentication"]
repository = "https://github.com/MarkAtwood/crate-secretx"

[dependencies]
secretx-core = { workspace = true }
async-trait = { workspace = true }
inventory = { workspace = true }
reqwest = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
crc32c = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
