[package]
name = "secretx-hashicorp-vault"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "HashiCorp Vault backend for secretx."
keywords = ["secrets", "security"]
categories = ["cryptography", "authentication"]
repository = "https://github.com/MarkAtwood/crate-secretx"

[dependencies]
secretx-core = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
vaultrs = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
