[package]
name = "secretx-keyring"
version = "0.3.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Linux kernel keyring backend for secretx."
readme = "README.md"
keywords = ["secrets", "security"]
categories = ["cryptography", "authentication"]
repository = "https://github.com/MarkAtwood/crate-secretx"

[dependencies]
secretx-core = { workspace = true }
async-trait = { workspace = true }
inventory = { workspace = true }
keyring = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
