[package]
name = "secretx-keyring"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Linux kernel keyring backend for secretx."
readme = "README.md"
keywords = ["secrets", "security"]
categories = ["cryptography", "authentication"]
repository = "https://github.com/MarkAtwood/crate-secretx"

[dependencies]
secretx-core = { workspace = true }
async-trait = { workspace = true }
inventory = { workspace = true }
keyring = { version = "3", features = ["linux-native", "crypto-rust"] }
tokio = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
