[package]
name = "secretx-pkcs11"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "PKCS#11 HSM backend for secretx."
readme = "README.md"
keywords = ["secrets", "security"]
categories = ["cryptography", "authentication"]
repository = "https://github.com/MarkAtwood/crate-secretx"

[dependencies]
secretx-core = { workspace = true }
async-trait = { workspace = true }
cryptoki = { workspace = true }
inventory = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
zeroize = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
p256 = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
