[package]
name = "secretx-signature"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Adapter bridging secretx::SigningBackend to signature::Signer"
keywords = ["secrets", "signature", "signer", "adapter"]
categories = ["cryptography", "authentication"]
repository = "https://github.com/MarkAtwood/crate-secretx"
readme = "README.md"

[dependencies]
secretx-core = { workspace = true }
signature = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

ed25519 = { workspace = true, optional = true }
p256 = { workspace = true, optional = true }
rsa = { workspace = true, optional = true }

[dev-dependencies]
async-trait = { workspace = true }
ed25519-dalek = { workspace = true }
pkcs8 = { workspace = true }
secretx-local-signing = { workspace = true }
tokio = { workspace = true }

[features]
default = []
ed25519 = ["dep:ed25519"]
ecdsa-p256 = ["dep:p256"]
rsa-pss = ["dep:rsa"]

[package.metadata.docs.rs]
all-features = true
