[package]
name = "secretx-systemd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "systemd credentials backend for secretx."
readme = "README.md"
keywords = ["secrets", "security", "systemd"]
categories = ["cryptography", "authentication"]
repository = "https://github.com/MarkAtwood/crate-secretsx"

[dependencies]
secretx-core = { workspace = true }
async-trait = { workspace = true }
inventory = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["fs"] }
