[package]
name = "secretx-tpm2"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "TPM 2.0 backend for secretx."
readme = "README.md"
keywords = ["secrets", "security", "tpm", "tpm2"]
categories = ["cryptography", "authentication"]
repository = "https://github.com/MarkAtwood/crate-secretx"

[dependencies]
async-trait = { workspace = true }
inventory = { workspace = true }
picky-asn1-der = "0.5"
picky-asn1-x509 = "0.15"
secretx-core = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tss-esapi = "7.7"
zeroize = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
