[package]
name = "secretx-wolfhsm"
version = "0.3.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "wolfHSM secure element backend for secretx."
readme = "README.md"
keywords = ["secrets", "security"]
categories = ["cryptography", "authentication"]
repository = "https://github.com/MarkAtwood/crate-secretx"

[dependencies]
secretx-core = { workspace = true }
async-trait = { workspace = true }
inventory = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
wolfhsm = "0.1.0"

[dev-dependencies]
tokio = { workspace = true }
